welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: identifier expected but '=' found.
var nbPas:int nbPas=0
                   ^